k3d/addons/manifests/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-ingress
---
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
